--- a/src/shared/styles/global.scss
+++ b/src/shared/styles/global.scss
@@ -12,15 +12,34 @@ body {
 }
 
 body {
+  position: relative;
   display: flex;
   flex-direction: column;
-  position: relative;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.2;
-  color: #000;
+  font-size: var(--fs-sm);
+  font-weight: var(--fw-r);
+  line-height: var(--line-height);
+  color: var(--site-color);
+  background-color: var(--site-bg-color);
 }
 
 footer {
   margin-top: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 var(--container-offset);
+  max-width: var(--container-width);
+}
+
+.container-fluid {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 var(--container-fuild-offset);
+  max-width: var(--container-fluid-width);
 }
