fix entry style file

--- a/src/shared/styles/main.scss
+++ b/src/shared/styles/main.scss
@@ -1,5 +1,5 @@
 @import './variables/containers.scss';
-@import './variables/gap.scss';
+@import './variables/gaps.scss';
 @import './variables/typography.scss';
 @import './variables/colors.scss';
 
