--- a/src/shared/styles/main.scss
+++ b/src/shared/styles/main.scss
@@ -3,5 +3,4 @@
 @import './variables/typography.scss';
 @import './variables/colors.scss';
 
-@import './global.scss';
-
+@import './template.scss';
