--- a/src/shared/styles/variables/colors.scss
+++ b/src/shared/styles/variables/colors.scss
@@ -2,11 +2,13 @@
   --white: #fff;
   --black: #000;
 
-  --primary: #1A56DB;
-  --secondary: #A4CAFE;
+  --primary: #1a56db;
+  --secondary: #a4cafe;
+
   --dark: #111928;
   --light: var(--white);
-  --lighter: #D1D5DB;
+
+  --lighter: #d1d5db;
   // --success: #28a745;
   // --warning: #ffc107;
   // --danger: #dc3545;
