--- a/src/shared/styles/variables/typography.scss
+++ b/src/shared/styles/variables/typography.scss
@@ -11,9 +11,10 @@
   --fs-xxxl: 56px;
 
   --main-title: clamp(var(--fs-lg), 3.6vw, var(--fs-xxxl));
+  --main-text: clamp(var(--fs-sm), 2.8vw, var(--fs-md));
+
   --base-title: clamp(var(--fs-lg), 3.6vw, var(--fs-xxxl));
-  --main-text: clamp(var(--fs-sm), 2.8vw, var(--fs-md))
-  --base-text: clamp(var(--fs-sm), 2.8vw, var(--fs-md))
+  --base-text: clamp(var(--fs-sm), 2.8vw, var(--fs-md));
 
   --fw-t: 100;
   --fw-el: 200;
