--- a/src/shared/styles/variables/transitions.scss
+++ b/src/shared/styles/variables/transitions.scss
@@ -1,4 +1,4 @@
 :root {
-  --base-transition: .05s .25s ease-in;
-  --slow-transition: .1s .6s ease-in-out;
+  --base-transition: 0.05s 0.25s ease-in;
+  --slow-transition: 0.1s 0.6s ease-in-out;
 }
