--- a/src/components/advantages/advantages-type-1/advantages-type-1.module.scss
+++ b/src/components/advantages/advantages-type-1/advantages-type-1.module.scss
@@ -1,3 +1,10 @@
 .root {
   position: relative;
 }
+
+.item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
