--- a/src/shared/styles/variables/typography.scss
+++ b/src/shared/styles/variables/typography.scss
@@ -12,9 +12,9 @@
 
   --main-title: clamp(var(--fs-lg), 3.6vw, var(--fs-xxxl));
   --main-text: clamp(var(--fs-sm), 2.8vw, var(--fs-md));
-
-  --base-title: clamp(var(--fs-lg), 3.6vw, var(--fs-xxxl));
+  --base-title: clamp(var(--fs-xl), 7vw, var(--fs-xxxl));
   --base-text: clamp(var(--fs-sm), 2.8vw, var(--fs-md));
+  --base-subtitle: clamp(var(--fs-md), 4vw, var(--fs-lg));
 
   --fw-t: 100;
   --fw-el: 200;
