add first advantage template

--- a/src/components/advantages/advantages-type-1/advantages-type-1.module.scss
+++ b/src/components/advantages/advantages-type-1/advantages-type-1.module.scss
@@ -1,10 +1,59 @@
+@import '../../../shared/styles/extends.scss';
+@import '../../../shared/styles/mixins.scss';
+
 .root {
-  position: relative;
+  @extend %section-offset;
+
+  ul {
+    @extend %list-reset;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
+
+    @include media-down($desktop-width) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include media-down($tablet-width) {
+      grid-template-columns: 1fr;
+    }
+  }
 }
 
 .item {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  gap: var(--gap-lg);
+
+  @include media-down($tablet-lg-width) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  &_icon {
+    flex: 0 0 100px;
+    width: 100px;
+    height: 100px;
+    @extend %flex-center;
+    background-color: #e1effe;
+    border-radius: 100px;
+  }
+
+  &_content {
+    @extend %flex-column;
+    gap: var(--gap-sm);
+
+    &__title {
+      font-size: var(--base-subtitle);
+    }
+  }
+}
+
+.base_title {
   text-align: center;
+  color: var(--primary);
+}
+
+.base_subtitle {
+  margin-bottom: var(--gap-xs);
 }
