--- a/src/shared/styles/extends.scss
+++ b/src/shared/styles/extends.scss
@@ -2,3 +2,4 @@
 @import './extends/resets.scss';
 @import './extends/offsets.scss';
 @import './extends/hover.scss';
+@import './extends/pseudoelements.scss';
