--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -3,3 +3,4 @@
 @import './variables/gaps.scss';
 @import './variables/typography.scss';
 @import './variables/colors.scss';
+@import './variables/utils.scss';
