--- a/src/shared/styles/variables/colors.scss
+++ b/src/shared/styles/variables/colors.scss
@@ -1,22 +1,28 @@
+$white: #fff;
+$black: #000;
+$primary: #1a56db;
+$secondary: #a4cafe;
+$dark: #111928;
+$light: #1a56db;
+$lighter: #d1d5db;
+
 :root {
-  --white: #fff;
-  --black: #000;
+  --white: #{$white};
+  --black: #{$black};
+  --primary: #{$primary};
+  --secondary: #{$secondary};
+  --dark: #{$dark};
+  --light: #{$white};
+  --lighter: #{$lighter};
 
-  --primary: #1a56db;
-  --secondary: #a4cafe;
-
-  --dark: #111928;
-  --light: var(--white);
-
-  --lighter: #d1d5db;
   // --success: #28a745;
   // --warning: #ffc107;
   // --danger: #dc3545;
   // --info: #A4CAFE;
   // --muted: #6c757d;
 
-  --site-color: var(--dark);
-  --site-bg-color: var(--white);
-  --site-header-color: var(--white);
-  --site-footer-color: var(--primary);
+  --site-color: #{$dark};
+  --site-bg-color: #{$white};
+  --site-header-color: #{$white};
+  --site-footer-color: #{$primary};
 }
