add five advantage template

--- a/src/components/advantages/advantages-type-2/advantages-type-2.module.scss
+++ b/src/components/advantages/advantages-type-2/advantages-type-2.module.scss
@@ -24,7 +24,7 @@
   @extend %flex-align;
   flex-direction: column;
   text-align: center;
-  gap: var(--gap-lg);
+  gap: var(--gap-sm);
 
   &_icon {
     flex: 0 0 80px;
