--- a/src/components/advantages/advantages-type-3/advantages-type-3.module.scss
+++ b/src/components/advantages/advantages-type-3/advantages-type-3.module.scss
@@ -23,7 +23,7 @@
 .item {
   display: flex;
   flex-direction: column;
-  gap: var(--gap-lg);
+  gap: var(--gap-sm);
 
   &_content {
     @extend %flex-column;
