--- a/src/components/advantages/advantages-type-6/advantages-type-6.module.scss
+++ b/src/components/advantages/advantages-type-6/advantages-type-6.module.scss
@@ -4,33 +4,32 @@
 .root {
   @extend %section-offset;
 
+  &_wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: clamp(32px, 6.4vw, calc(var(--gap-sm) * 4));
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    @include media-down(1280px) {
+      grid-template-columns: 1fr;
+    }
+
+    @include media-down(650px) {
+      gap: 32px;
+    }
+  }
+
   ul {
     @extend %list-reset;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
-
-    @include media-down($desktop-width) {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @include media-down($tablet-width) {
-      grid-template-columns: 1fr;
-    }
-  }
-}
-
-.item {
-  display: flex;
-  flex-direction: column;
-  gap: var(--gap-sm);
-
-  &_line {
-    max-width: 250px;
-    width: 100%;
-    height: 1px;
-    background-color: var(--primary);
-    opacity: var(--tooltip-opacity);
   }
 }
 
@@ -42,4 +41,11 @@
 .base_subtitle {
   font-size: clamp(24px, 4.8vw, 48px);
   color: var(--primary);
+}
+
+.section_block {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: calc(var(--gap-sm) * 4);
+  align-items: center;
 }
