--- a/src/components/offer/offer-type-1/offer-type-1.module.scss
+++ b/src/components/offer/offer-type-1/offer-type-1.module.scss
@@ -36,7 +36,7 @@
 
     button {
       width: 100%;
-      background-color: #7895d4; //temp
+      background-color: var(--primary-lighten-20);
     }
 
     @include media-down($tablet-lg-width) {
