--- a/src/components/offer/offer-type-2/offer-type-2.module.scss
+++ b/src/components/offer/offer-type-2/offer-type-2.module.scss
@@ -8,7 +8,7 @@
     @extend %flex-column;
     gap: var(--gap-lg);
     padding: calc(var(--gap-lg) * 3.5) var(--gap-lg);
-    background-color: var(--primary);
+    background-color: var(--secondary);
     color: var(--white);
     margin: 0 auto;
     width: 100%;
