--- a/src/components/offer/offer-type-6/offer-type-6.module.scss
+++ b/src/components/offer/offer-type-6/offer-type-6.module.scss
@@ -5,30 +5,54 @@
   @extend %section-offset;
 
   &_wrapper {
-    @extend %flex-column;
-    gap: var(--gap-lg);
-    padding: var(--gap-xxl) var(--gap-lg);
-    background-color: var(--primary);
-    color: var(--white);
-    border-radius: 20px;
-    max-width: 1440px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: var(--gap-sm) var(--gap-xxxl);
+    align-items: center;
+    padding: calc(var(--gap-lg) * 3.5) var(--gap-lg);
     margin: 0 auto;
+    width: 100%;
+    color: var(--white);
+    background-color: var(--secondary);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+
+    @include media-down($desktop-width) {
+      padding: calc(var(--gap-lg) * 2) var(--gap-lg);
+      display: flex;
+      flex-direction: column;
+      gap: var(--gap-lg);
+      align-items: flex-start;
+    }
+  }
+}
+
+.base_title {
+  grid-row: 1 / 3;
+  margin-bottom: 0;
+}
+
+@include media-down($desktop-width) {
+  .base_text {
+    max-width: 800px;
   }
 }
 
 .offer_form {
   @extend %flex-column;
   gap: var(--gap-md);
-  align-items: center;
+  max-width: 700px;
 
   fieldset {
     margin: 0;
     border: 0;
     padding: 0;
     width: 100%;
-    max-width: 1140px;
+
     @extend %flex-align;
-    gap: var(--gap-md);
+    gap: var(--gap-sm);
 
     input {
       width: 100%;
@@ -36,21 +60,16 @@
 
     button {
       width: 100%;
-      background-color: var(--primary-lighten-20);
+      background-color: var(--primary);
     }
 
-    @include media-down($tablet-lg-width) {
-      flex-wrap: wrap;
-      input,
-      button {
-        width: calc(50% - (var(--gap-md) / 2));
-      }
-    }
+    @include media-down($tablet-width) {
+      flex-direction: column;
+      align-items: flex-start;
 
-    @include media-down($mobile-width) {
       input,
       button {
-        width: 100%;
+        max-width: 500px;
       }
     }
   }
@@ -61,15 +80,4 @@
       color: var(--white);
     }
   }
-}
-
-.base_title {
-  text-align: center;
-  margin-bottom: 0;
-}
-
-.base_text {
-  max-width: 900px;
-  text-align: center;
-  margin: 0 auto;
 }
