add offer-templates #3, #5

--- a/src/components/offer/offer-type-4/offer-type-4.module.scss
+++ b/src/components/offer/offer-type-4/offer-type-4.module.scss
@@ -50,6 +50,7 @@
   small {
     text-align: center;
     a {
+      font-weight: var(--fw-sb);
       text-decoration: underline;
       color: var(--white);
     }
