--- a/src/components/offer/offer-type-5/offer-type-5.module.scss
+++ b/src/components/offer/offer-type-5/offer-type-5.module.scss
@@ -5,71 +5,93 @@
   @extend %section-offset;
 
   &_wrapper {
+    display: grid;
+    grid-template-columns: 4fr 3fr;
+    gap: var(--gap-xxl);
+    background-color: transparent;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    @include media-down($laptop-width) {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  &_content {
     @extend %flex-column;
     gap: var(--gap-lg);
-    padding: var(--gap-xxl) var(--gap-lg);
-    background-color: var(--primary);
-    color: var(--white);
-    border-radius: 20px;
-    max-width: 1440px;
-    margin: 0 auto;
+
+    @include media-down($laptop-width) {
+      order: 1;
+    }
   }
 }
 
 .offer_form {
   @extend %flex-column;
   gap: var(--gap-md);
-  align-items: center;
 
   fieldset {
     margin: 0;
     border: 0;
     padding: 0;
     width: 100%;
-    max-width: 1140px;
-    @extend %flex-align;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: var(--gap-md);
+
+    @include media-down($laptop-width) {
+      display: flex;
+      flex-wrap: wrap;
+    }
 
     input {
       width: 100%;
+
+      @include media-down($laptop-width) {
+        width: calc(50% - (var(--gap-md) / 2));
+      }
+
+      @include media-down($mobile-width) {
+        width: 100%;
+      }
     }
 
     button {
       width: 100%;
-      background-color: var(--primary-lighten-20);
-    }
 
-    @include media-down($tablet-lg-width) {
-      flex-wrap: wrap;
-      input,
-      button {
+      @include media-down($laptop-width) {
         width: calc(50% - (var(--gap-md) / 2));
       }
-    }
 
-    @include media-down($mobile-width) {
-      input,
-      button {
-        width: 100%;
+      @include media-down($mobile-width) {
+        width: fit-content;
+        min-width: 180px;
       }
     }
   }
 
   small {
+    color: var(--black);
     a {
+      font-weight: var(--fw-sb);
       text-decoration: underline;
-      color: var(--white);
+      color: var(--black);
     }
   }
 }
 
 .base_title {
-  text-align: center;
   margin-bottom: 0;
+  color: var(--primary);
 }
 
 .base_text {
+  color: var(--black);
   max-width: 900px;
-  text-align: center;
   margin: 0 auto;
 }
