add news layout 5

--- a/src/shared/styles/template.scss
+++ b/src/shared/styles/template.scss
@@ -54,6 +54,7 @@ a {
   width: 100%;
   font-size: var(--base-title);
   margin-bottom: var(--gap-xxl);
+  color: var(--primary);
 }
 
 .base_subtitle {
