--- a/src/components/footer/footer-type-1/footer-type-1.module.scss
+++ b/src/components/footer/footer-type-1/footer-type-1.module.scss
@@ -12,9 +12,9 @@
 
   &_bottom {
     @extend %flex-align;
+    flex-wrap: wrap;
     gap: var(--gap-lg);
     padding: var(--gap-lg) 0;
-
     border-top: 1px solid var(--white);
   }
 }
@@ -69,10 +69,20 @@
   gap: var(--gap-lg);
   margin-right: auto;
 
+  @include media-down($mobile-width) {
+    width: 100%;
+  }
+
   ul {
     @extend %list-reset;
     @extend %flex-align;
+    flex-wrap: wrap;
     gap: var(--gap-sm);
+
+    @include media-down($mobile-width) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
 
     li a {
       text-decoration: underline;
@@ -96,6 +106,10 @@
     @extend %list-reset;
     @extend %flex-align;
     gap: var(--gap-sm);
+  }
+
+  a {
+    @extend %flex-center;
   }
 
   svg {
