--- a/src/components/about/about-type-2/about-type-2.module.scss
+++ b/src/components/about/about-type-2/about-type-2.module.scss
@@ -4,21 +4,23 @@
 .root {
   @extend %section-offset;
 
-  ul {
-    @extend %list-reset;
-    @extend %flex-column;
-
-    gap: var(--gap-md);
-    margin-bottom: var(--gap-lg);
-  }
-
   &_content {
+    @extend %sticky-lg;
     @extend %flex-column;
     height: 100%;
     gap: var(--gap-md);
 
     button {
       margin-top: auto;
+    }
+
+    ul {
+      @extend %list-reset;
+      @extend %flex-column;
+
+      gap: var(--gap-md);
+      margin-bottom: var(--gap-lg);
+      container: list-grid / inline-size;
     }
   }
 
@@ -28,16 +30,23 @@
     gap: var(--gap-lg);
 
     img {
+      @extend %sticky-lg;
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+      height: auto;
+      object-fit: contain;
     }
 
-    @include media-down($laptop-width) {
+    @include media-down($tablet-width) {
       grid-template-columns: 1fr;
 
       img {
         order: 2;
+      }
+
+      img,
+      .root_content {
+        position: relative;
+        top: 0;
       }
     }
   }
@@ -54,6 +63,7 @@
 .item {
   position: relative;
   @extend %flex-column;
+  justify-content: center;
   gap: var(--gap-sm);
 
   padding-left: 52px;
@@ -72,7 +82,7 @@
     fill: var(--primary);
   }
 
-  @include media-down($tablet-width) {
+  @container list-grid (max-width: 400px) {
     padding-left: 0;
     svg {
       position: static;
