--- a/src/shared/styles/extends.scss
+++ b/src/shared/styles/extends.scss
@@ -3,3 +3,4 @@
 @import './extends/offsets.scss';
 @import './extends/hover.scss';
 @import './extends/pseudoelements.scss';
+@import './extends/utils.scss';
