--- a/src/components/about/about-type-3/about-type-3.module.scss
+++ b/src/components/about/about-type-3/about-type-3.module.scss
@@ -4,14 +4,6 @@
 .root {
   @extend %section-offset;
 
-  ul {
-    @extend %list-reset;
-    @extend %flex-column;
-
-    gap: var(--gap-md);
-    margin-bottom: var(--gap-lg);
-  }
-
   &_content {
     @extend %flex-column;
     height: fit-content;
@@ -19,6 +11,14 @@
 
     button {
       margin-top: var(--gap-xs);
+    }
+
+    ul {
+      @extend %list-reset;
+      @extend %flex-column;
+
+      gap: var(--gap-md);
+      margin-bottom: var(--gap-lg);
     }
   }
 
@@ -30,12 +30,11 @@
 
     img {
       width: 100%;
-      height: 100%;
-      max-height: 700px;
-      object-fit: cover;
+      height: auto;
+      object-fit: contain;
     }
 
-    @include media-down($laptop-width) {
+    @include media-down($tablet-width) {
       grid-template-columns: 1fr;
     }
   }
@@ -44,10 +43,6 @@
 .base_title {
   color: var(--primary);
   margin-bottom: 0;
-}
-
-.base_subtitle {
-  font-size: var(--fs-xxl);
 }
 
 .item {
