--- a/src/components/about/about-type-7/about-type-7.module.scss
+++ b/src/components/about/about-type-7/about-type-7.module.scss
@@ -7,19 +7,23 @@
   &_wrapper {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: var(--gap-lg);
+    gap: clamp(var(--gap-sm), 4vw, var(--gap-lg));
 
     img {
       width: 100%;
       height: auto;
-      object-fit: cover;
-      aspect-ratio: 1.2 / 1;
+      object-fit: contain;
+    }
+
+    @include media-down($mobile-width) {
+      grid-template-columns: 1fr;
     }
   }
 }
 
 .base_title {
   text-align: center;
+  margin-bottom: var(--gap-lg);
   color: var(--primary);
 }
 
