--- a/src/shared/styles/template.scss
+++ b/src/shared/styles/template.scss
@@ -8,7 +8,7 @@ html,
 body {
   width: 100%;
   min-height: 100vh;
-  overflow-x: hidden;
+  // overflow-x: hidden; // !! position sticky dont work with overflow
 }
 
 body {
