--- a/src/components/services/services-type-7/services-type-7.module.scss
+++ b/src/components/services/services-type-7/services-type-7.module.scss
@@ -12,6 +12,10 @@
     @include media-down($mobile-width) {
       gap: var(--gap-lg);
     }
+
+    li {
+      width: 100%;
+    }
   }
 }
 
@@ -23,10 +27,10 @@
 .item {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: calc(var(--gap-sm) * 4);
+  grid-gap: calc(var(--gap-sm) * 4) clamp(var(--gap-lg), 4vw, var(--gap-sm) * 4);
   align-items: center;
 
-  @include media-down($tablet-lg-width) {
+  @include media-down($tablet-width) {
     grid-template-columns: 1fr;
     gap: var(--gap-lg);
   }
