--- a/src/components/blog-detail/blog-detail-type-3/blog-detail-type-3.module.scss
+++ b/src/components/blog-detail/blog-detail-type-3/blog-detail-type-3.module.scss
@@ -4,6 +4,15 @@
 .root {
   @extend %section-offset;
 
+  &_header {
+    @extend %flex-column;
+    gap: var(--gap-md);
+  }
+
+  .author_block {
+    margin-bottom: var(--gap-md);
+  }
+
   small {
     display: block;
     font-size: 16px;
