--- a/src/shared/styles/extends/pseudoelements.scss
+++ b/src/shared/styles/extends/pseudoelements.scss
@@ -27,7 +27,6 @@
     height: 120%;
     content: '';
     border-radius: 50%;
-    background-color: var(--primary);
-    opacity: var(--tooltip-opacity);
+    background-color: var(--primary-lighten-40);
   }
 }
