--- a/src/components/advantages/components/advantages-type-3/advantages-type-3.module.scss
+++ b/src/components/advantages/components/advantages-type-3/advantages-type-3.module.scss
@@ -2,49 +2,56 @@
 @import '../../../../shared/styles/mixins.scss';
 
 .root {
-  @extend %section-offset;
-
-  ul {
-    @extend %list-reset;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
-
-    @include media-down($desktop-width) {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @include media-down($tablet-width) {
-      grid-template-columns: 1fr;
-    }
-  }
+  container: root / inline-size;
 }
 
-.item {
-  display: flex;
-  flex-direction: column;
-  gap: var(--gap-sm);
+.list {
+  @extend %list-reset;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
 
-  &_content {
+  @include container-down('root', $laptop-width) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include container-down('root', $tablet-width) {
+    grid-template-columns: 1fr;
+  }
+
+  &_item {
     @extend %flex-column;
     gap: var(--gap-sm);
-    height: 100%;
 
-    &__title {
-      font-size: var(--base-subtitle);
+    &_icon {
+      @extend %flex-center;
+      flex: 0 0 clamp(40px, 3vw, 52px);
+      width: clamp(40px, 3vw, 52px);
+      height: clamp(40px, 3vw, 52px);
+
+      svg {
+        width: 100%;
+        height: 100%;
+      }
     }
 
-    p {
-      margin-top: auto;
+    &_content {
+      @extend %flex-column;
+      gap: var(--gap-sm);
+      height: 100%;
+
+      .base_title {
+        text-align: center;
+        color: var(--primary);
+      }
+
+      .base_subtitle {
+        min-height: calc(var(--base-subtitle) * 2 * 1.2);
+
+        @include container-down('root', $tablet-width) {
+          min-height: initial;
+        }
+      }
     }
   }
-}
-
-.base_title {
-  text-align: center;
-  color: var(--primary);
-}
-
-.base_subtitle {
-  margin-bottom: var(--gap-xs);
 }
