--- a/src/components/advantages/components/advantages-type-4/advantages-type-4.module.scss
+++ b/src/components/advantages/components/advantages-type-4/advantages-type-4.module.scss
@@ -2,44 +2,34 @@
 @import '../../../../shared/styles/mixins.scss';
 
 .root {
-  @extend %section-offset;
+  container: root / inline-size;
+}
 
-  ul {
-    @extend %list-reset;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
+.list {
+  @extend %list-reset;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
 
-    @include media-down($desktop-width) {
-      grid-template-columns: repeat(2, 1fr);
-    }
+  @include container-down('root', $laptop-width) {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
-    @include media-down($tablet-width) {
-      grid-template-columns: 1fr;
+  @include container-down('root', $tablet-width) {
+    grid-template-columns: 1fr;
+  }
+
+  &_item {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap-sm);
+
+    .base_subtitle {
+      width: fit-content;
+      font-size: clamp(24px, 4.8vw, 48px);
+      color: var(--primary);
+
+      border-bottom: 1px solid var(--primary-lighten-40);
     }
   }
-}
-
-.item {
-  display: flex;
-  flex-direction: column;
-  gap: var(--gap-sm);
-
-  &_line {
-    max-width: 250px;
-    width: 100%;
-    height: 1px;
-    background-color: var(--primary);
-    opacity: var(--tooltip-opacity);
-  }
-}
-
-.base_title {
-  text-align: left;
-  color: var(--primary);
-}
-
-.base_subtitle {
-  font-size: clamp(24px, 4.8vw, 48px);
-  color: var(--primary);
 }
