--- a/src/components/advantages/components/advantages-type-5/advantages-type-5.module.scss
+++ b/src/components/advantages/components/advantages-type-5/advantages-type-5.module.scss
@@ -2,48 +2,47 @@
 @import '../../../../shared/styles/mixins.scss';
 
 .root {
-  @extend %section-offset;
-
-  ul {
-    @extend %list-reset;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
-
-    @include media-down($desktop-width) {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @include media-down($tablet-width) {
-      grid-template-columns: 1fr;
-    }
-  }
+  container: root / inline-size;
 }
 
-.item {
-  @extend %flex-column;
-  gap: var(--gap-sm);
+.list {
+  @extend %list-reset;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
 
-  @include media-down($tablet-lg-width) {
-    flex-direction: column;
-    align-items: flex-start;
+  @include container-down('root', $laptop-width) {
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  &_heading {
-    position: relative;
-    min-height: 90px;
+  @include container-down('root', $tablet-width) {
+    grid-template-columns: 1fr;
+  }
 
-    @extend %flex-align;
+  &_item {
+    @extend %flex-column;
+    gap: var(--gap-sm);
 
-    &_number {
-      color: var(--primary);
-      font-size: 120px;
-      font-weight: var(--fw-b);
-      opacity: var(--tooltip-opacity);
-      top: 50%;
-      left: 0;
-      position: absolute;
-      transform: translateY(-50%);
+    &_header {
+      position: relative;
+      min-height: 90px;
+      @extend %flex-align;
+
+      &_num {
+        color: var(--primary);
+        font-size: 120px;
+        line-height: 1;
+        font-weight: var(--fw-b);
+        opacity: var(--tooltip-opacity);
+        top: 50%;
+        left: 0;
+        position: absolute;
+        transform: translateY(-50%);
+
+        @include container-down('root', $tablet-width) {
+          font-size: 90px;
+        }
+      }
     }
   }
 }
