--- a/src/components/advantages/components/advantages-type-6/advantages-type-6.module.scss
+++ b/src/components/advantages/components/advantages-type-6/advantages-type-6.module.scss
@@ -2,50 +2,56 @@
 @import '../../../../shared/styles/mixins.scss';
 
 .root {
-  @extend %section-offset;
+  container: root / inline-size;
 
-  &_wrapper {
+  &_content {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    gap: clamp(32px, 6.4vw, calc(var(--gap-sm) * 4));
+    grid-template-columns: 3fr 4fr;
 
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+    gap: clamp(var(--gap-md), 4vw, var(--gap-xxl));
 
-    @include media-down(1280px) {
+    @include container-down('root', $laptop-width) {
       grid-template-columns: 1fr;
     }
 
-    @include media-down(650px) {
-      gap: 32px;
+    &_side {
+      position: sticky;
+      top: var(--gap-lg);
+      height: fit-content;
+      &:first-child {
+        align-self: center;
+      }
+      img {
+        display: block;
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+      }
     }
   }
-
-  ul {
-    @extend %list-reset;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
-  }
 }
 
-.base_title {
-  text-align: left;
-  color: var(--primary);
-}
-
-.base_subtitle {
-  font-size: clamp(24px, 4.8vw, 48px);
-  color: var(--primary);
-}
-
-.section_block {
+.list {
+  @extend %list-reset;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: calc(var(--gap-sm) * 4);
-  align-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
+
+  @include container-down('root', $mobile-width) {
+    grid-template-columns: 1fr;
+  }
+
+  &_item {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap-sm);
+
+    .base_subtitle {
+      width: fit-content;
+      font-size: clamp(24px, 4.8vw, 48px);
+      color: var(--primary);
+
+      border-bottom: 1px solid var(--primary-lighten-40);
+    }
+  }
 }
