--- a/src/components/advantages/components/advantages-type-7/advantages-type-7.module.scss
+++ b/src/components/advantages/components/advantages-type-7/advantages-type-7.module.scss
@@ -2,34 +2,42 @@
 @import '../../../../shared/styles/mixins.scss';
 
 .root {
-  @extend %section-offset;
-
-  ul {
-    @extend %list-reset;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
-  }
+  container: root / inline-size;
 }
 
-.item {
-  @extend %flex-column;
-  gap: var(--gap-sm);
-  align-items: center;
-  text-align: center;
+.list {
+  @extend %list-reset;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: clamp(var(--gap-lg), 4vw, var(--gap-xxl)) var(--gap-lg);
 
-  svg {
-    path {
-      fill: var(--primary);
+  &_item {
+    @extend %flex-column;
+    align-items: center;
+    text-align: center;
+    gap: var(--gap-sm);
+
+    &_icon {
+      @extend %flex-center;
+      flex: 0 0 clamp(40px, 3vw, 52px);
+      width: clamp(40px, 3vw, 52px);
+      height: clamp(40px, 3vw, 52px);
+
+      svg {
+        width: 100%;
+        height: 100%;
+        fill: var(--primary);
+      }
+    }
+
+    &_content {
+      @extend %flex-column;
+      gap: var(--gap-sm);
+      height: 100%;
+
+      .base_subtitle {
+        color: var(--primary);
+      }
     }
   }
-}
-
-.base_title {
-  text-align: center;
-  color: var(--primary);
-}
-
-.base_subtitle {
-  color: var(--primary);
 }
