--- a/src/shared/styles/template.scss
+++ b/src/shared/styles/template.scss
@@ -53,7 +53,7 @@ a {
   display: block;
   width: 100%;
   font-size: var(--base-title);
-  margin-bottom: clamp(var(--gap-md), 6vw, var(--gap-xxl));
+  margin-bottom: clamp(var(--gap-xl), 6vw, var(--gap-xxl));
   color: var(--primary);
 }
 
