--- a/src/components/advantages/components/advantages-type-6/advantages-type-6.module.scss
+++ b/src/components/advantages/components/advantages-type-6/advantages-type-6.module.scss
@@ -18,9 +18,16 @@
       position: sticky;
       top: var(--gap-lg);
       height: fit-content;
+
+      @include container-down('root', $laptop-width) {
+        position: relative;
+        top: 0;
+      }
+
       &:first-child {
         align-self: center;
       }
+
       img {
         display: block;
         width: 100%;
